[gd_scene load_steps=6 format=3 uid="uid://ddhf54feanujc"]

[ext_resource type="Texture2D" uid="uid://bj55fa51y1iaj" path="res://Assets/Crorrsss.png" id="1_67510"]
[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_nckdv"]
[ext_resource type="Texture2D" uid="uid://driwuu6g75qd4" path="res://Assets/image_2024-03-04_204227406.png" id="1_p1a4s"]
[ext_resource type="AudioStream" uid="uid://6y4j1hvdwtcy" path="res://Assets/Sounds/lobby.mp3" id="4_0bbdn"]
[ext_resource type="AudioStream" uid="uid://dhvghuqxgbiml" path="res://Assets/Sounds/Button_noise.mp3" id="5_5nx6j"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_nckdv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_p1a4s")
expand_mode = 1

[node name="Control" type="Control" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -554.0
offset_top = 30.0
offset_right = -514.0
offset_bottom = 70.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(2, 2)

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -275.0
offset_top = -258.0
offset_right = 1773.0
offset_bottom = 1790.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_67510")

[node name="ButtonsContainer" type="Control" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 526.0
offset_right = 566.0
offset_bottom = 40.0
grow_vertical = 2
scale = Vector2(2, 2)

[node name="Play_Button" type="Button" parent="CanvasLayer/Control/ButtonsContainer"]
offset_left = -148.0
offset_top = -206.0
offset_right = 153.0
offset_bottom = -92.0
text = "Play"

[node name="Options_Button" type="Button" parent="CanvasLayer/Control/ButtonsContainer"]
offset_left = -148.0
offset_top = -56.0
offset_right = 153.0
offset_bottom = 58.0
text = "Options"

[node name="Exit_Button" type="Button" parent="CanvasLayer/Control/ButtonsContainer"]
offset_left = -148.0
offset_top = 94.0
offset_right = 153.0
offset_bottom = 208.0
text = "Exit"

[node name="MainMenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_0bbdn")
volume_db = -25.0

[node name="Sounds" type="Node" parent="."]

[node name="Button_sound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("5_5nx6j")
volume_db = -15.0

[connection signal="pressed" from="CanvasLayer/Control/ButtonsContainer/Play_Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/ButtonsContainer/Options_Button" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/ButtonsContainer/Exit_Button" to="." method="_on_button_3_pressed"]
